discussion/kv_engine/173474/173474_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add a time limit to range scan continue

Add a time limit to the range scan continue so that the scan runs
for a specified amount of time.

As per the design, the timeout only applies to the actual running of
the scan and not for any time spent waiting (e.g. waiting for a
thread).

Change-Id: I72471cf03823bb535a32e8c22f712ba7e8777312

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-27 14:26:44.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-27 15:50:48.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38423/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan.cc:80:13:
error: use of undeclared identifier "syncedContinueState"; did you mean "continueState"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38423/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17088/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.cc:80:13: error: use of undeclared identifier "syncedContinueState"; did you mean "continueState"? [clang-diagnostic-error]
            syncedContinueState.withRLock([](const auto& cs) { return cs; });
            ^~~~~~~~~~~~~~~~~~~
            continueState
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:235:40: note: "continueState" declared here
    folly::Synchronized<ContinueState> continueState;
                                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17088/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.cc:80:13:
error: use of undeclared identifier "syncedContinueState"; did you mean "continueState"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17088/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45743/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/range_scans/range_scan.cc(80): error C2065: "syncedContinueState": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45743/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18873/ : FAILURE

Compile error at [2022-04-27T15:49:37.026Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/range_scans/range_scan.cc:80:13:
error: ?syncedContinueState? was not declared in this scope; did you mean ?continueState??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18873/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19915/ : FAILURE

Compile error at [2022-04-27T15:43:33.128Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/range_scans/range_scan.cc:80:13:
error: use of undeclared identifier "syncedContinueState"; did you mean "continueState"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19915/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27289/ : FAILURE

Compile error at [2022-04-27T15:31:52.211Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/range_scans/range_scan.cc:80:13:
error: use of undeclared identifier "syncedContinueState"; did you mean "continueState"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27289/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18013/ : FAILURE

Compile error at [2022-04-27T15:17:06.165Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/range_scans/range_scan.cc:80:13:
error: use of undeclared identifier "syncedContinueState"; did you mean "continueState"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18013/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6744/ : FAILURE

Compile error at [2022-04-27T15:38:35.230Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/range_scans/range_scan.cc:80:13:
error: use of undeclared identifier "syncedContinueState"; did you mean "continueState"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6744/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6837/ : FAILURE

Compile error at [2022-04-27T14:56:00.671Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/range_scans/range_scan.cc:80:13:
error: ?syncedContinueState? was not declared in this scope; did you mean ?continueState??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6837/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19217/ : FAILURE

Compile error at [2022-04-27T15:41:24.200Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/range_scans/range_scan.cc:80:13:
error: ?syncedContinueState? was not declared in this scope; did you mean ?continueState??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19217/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16056/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
